err/hessianpy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/HessianPy-1.0.4.egg-info'...
Listing './lib/python3.5/site-packages/hessian'...
Compiling './lib/python3.5/site-packages/hessian/client.py'...
***   File "./lib/python3.5/site-packages/hessian/client.py", line 104
    return "%s(%s)" % (self.__class__.__name__, `self.url`)
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hessian/hello.py'...
***   File "./lib/python3.5/site-packages/hessian/hello.py", line 8
    print proxy.hello()
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hessian/hessian.py'...
***   File "./lib/python3.5/site-packages/hessian/hessian.py", line 85
    raise HessianError("Unsupported protocol version " + `major` + "." + `minor`)
                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hessian/lab.py'...
***   File "./lib/python3.5/site-packages/hessian/lab.py", line 14
    print e.args
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/hessian/server.py'...
***   File "./lib/python3.5/site-packages/hessian/server.py", line 121
    print "Starting test server"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hessian/test'...
Compiling './lib/python3.5/site-packages/hessian/test/UTF8Test.py'...
***   File "./lib/python3.5/site-packages/hessian/test/UTF8Test.py", line 81
    print "Encoding",  (len(src) / tEncode), "symbols/sec"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hessian/test/test.py'...
***   File "./lib/python3.5/site-packages/hessian/test/test.py", line 80
    res = `r` == `value`
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hessian/test/testSecure.py'...
***   File "./lib/python3.5/site-packages/hessian/test/testSecure.py", line 54
    print "\nStarting test HTTPS server"
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
